# s2a

./: .Rhistory  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  DESCRIPTION  HISTORY.rst  LICENSE  Makefile  NAMESPACE  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.Rproj.user/1DE9A786/: persistent-state
.Rproj.user/1DE9A786/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/1DE9A786/sources/prop/: INDEX
.Rproj.user/1DE9A786/sources/s-e171fb03/: 2FEA7383-contents  6A216699  6A216699-contents  BBB8C14C  BBB8C14C-contents
.Rproj.user/shared/notebooks/: paths
R/: s2a.R  zzz.R
data/: pbmc3k.RData  pbmc3k.RData.REMOVED.git-id
man/: convert_to_anndata.Rd
py/: convert.py
s2a/: __init__.py  convert.py
src/s2a/: __init__.py  convert.py
tests/: __init__.py  test_s2a.py  testthat.R
tests/testthat/: test-s2a.R
