[tool.poetry]
name = "s2a"
version = "0.2.0"
description = "glue to link Seurat to anndata objects"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "BSD-3"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
    ]
homepage = "https://gitlab.com/milothepsychic/s2a"
keywords=["Seurat", "AnnData", "scRNA-seq", "Scanpy"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
pandas = "^1.3.1"
numpy = "^1.21.1"
anndata = "^0.7.6"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.1"
flake8 = "^3.9.2"
black = "^21.7b0"
pyre-check = "^0.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
